--- a/vignettes/articles/minimalgut.qmd
+++ b/vignettes/articles/minimalgut.qmd
@@ -11,9 +11,9 @@ output:
         toc_depth: 2
         number_sections: true
 vignette: >
-  %\VignetteIndexEntry{miaTime}
-  %\VignetteEngine{quarto::html}
-  %\VignetteEncoding{UTF-8}
+    %\VignetteIndexEntry{mia}
+    %\VignetteEngine{knitr::rmarkdown}
+    %\VignetteEncoding{UTF-8}
 bibliography: references.bib
 ---
 
