--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Changes in version 0.99.1
++ Added bimodality functions
+
 Changes in version 0.99.0
 + Take into account Bioconductor requirements
 
@@ -19,3 +22,4 @@ Changes in version 0.1.5
 + Changed the function name getTimeDivergence (deprecated) into getStepwiseDivergence
 + Added internal utility functions
 + Added SilvermanAGutData
+
