--- a/vignettes/articles/minimalgut.Rmd
+++ b/vignettes/articles/minimalgut.Rmd
@@ -135,8 +135,8 @@ tse <- addStepwiseDivergence(
     group = "StudyIdentifier",
     time.interval = 1,
     time.col = "Time.hr",
-    name = "divergence_from_previous_step",
-    name.time = "time_from_previous_step"
+    name = c("divergence_from_previous_step", 
+        "time_from_previous_step", "reference_samples")
     )
 ```
 
