--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Changes in version 0.99.5
++ Added functions for estimating stability
+
 Changes in version 0.99.4
 + Added functions for calculating short term change metrics
 
